Changes in version 0.0.3 - UNRELEASED:
 * Bug 20806: Try even harder to exclude gstreamer.

Changes in version 0.0.2 - 2016-12-10:
 * Bug #20780: Shuffle and persist the ordering of internal bridges.
 * Bug #20806: Add an option to disable including `libavcodec.so` in the
   firefox container.
 * Bug #20899: Incorrect x86_64 ld.so flag check in dynlib.
 * Allow MADV_FREE in the firefox seccomp profile.

Changes in version 0.0.1 - 2016-12-09:
 * Initial release.