@@ -1,5 +1,8 @@
 Changes in version 0.0.3 - UNRELEASED:
  * Bug 20806: Try even harder to exclude gstreamer.
+ * Per the browser developers, the initial 7.0 alpha builds will not be ESR52
+   based, with a switch mid-alpha series, so keep the Grsec PaX override
+   around till 7.0.0 release.
 
 Changes in version 0.0.2 - 2016-12-10:
  * Bug #20780: Shuffle and persist the ordering of internal bridges.
